--- a/RAG_updated.ipynb
+++ b/RAG_updated.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "29cb6731-d654-4fad-9446-d358c0e511f2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## The following RAG notebook covers the following: \n",
     "### 1. Vectorizing all the content being fetched (Data Ingestion)\n",
@@ -741,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
