Formatted Compiled Rag to Gem Vault

--- a/Compiled Rag to Gem Vault.ipynb
+++ b/Compiled Rag to Gem Vault.ipynb
@@ -2,6 +2,46 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a6c567f4-6da4-4ebc-a3da-bca890d8069d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# Setup Tasks\n",
+    "\n",
+    "Installation: Intructions below\n",
+    "\n",
+    "* ffmpeg\n",
+    "* tesseract\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2061074e-1941-4ea1-af9d-436095ae5221",
+   "metadata": {},
+   "source": [
+    "Beyond pip installing the relevant libraries, you also need to do the following to ensure that full youtube processing occurs (for the vision transformer portion).\n",
+    "\n",
+    "**Need to install ffmpeg and add to path:https://www.gyan.dev/ffmpeg/builds/\n",
+    "get the ffmpeg-git-full.7z, extract it, add the bin to your System Environment path**\n",
+    "\n",
+    "* https://www.7-zip.org/ is where you can download the extractor specific to your machine\n",
+    "* then you right click the ffmpeg-git-full.7z file, and choose 'Extract here'\n",
+    "* rename the file to 'ffmpeg-download', then move it to a newly created folder with the path 'C:\\ffmpeg'\n",
+    "* Add new path in system environment variables with the following 'C:\\ffmpeg\\ffmpeg_download\\bin'\n",
+    "* In a new Command Prompt, confirm correct installation with ffmpeg -version\n",
+    "\n",
+    "**Need to install tesseract and do the same: https://github.com/UB-Mannheim/tesseract/wiki**\n",
+    "\n",
+    "* After installation with its default options chosen, the default path should be 'C:\\Program Files\\Tesseract-OCR'\n",
+    "* Add this path in system environment variables\n",
+    "* In a new Command Prompt, confirm correct installation with tesseract --version\n",
+    "\n",
+    "Note: You likely will need to manually type in the new paths in system environment variables as copy and paste won't work\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "025b4ffc-8192-416c-b7a7-2ddb8114f10f",
    "metadata": {},
    "source": [
@@ -136,7 +176,7 @@
    "id": "f81ca07e-a0f5-4238-b5ec-e7a660265d13",
    "metadata": {},
    "source": [
-    "## Set Designated Folder Path for processed files to be stored"
+    "## Set Designated Folder Path for your input files to be stored"
    ]
   },
   {
@@ -164,46 +204,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6c567f4-6da4-4ebc-a3da-bca890d8069d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "# Setup Tasks\n",
-    "\n",
-    "Installation: Intructions below\n",
-    "\n",
-    "* ffmpeg\n",
-    "* tesseract\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2061074e-1941-4ea1-af9d-436095ae5221",
-   "metadata": {},
-   "source": [
-    "Beyond pip installing the relevant libraries, you also need to do the following to ensure that full youtube processing occurs (for the vision transformer portion).\n",
-    "\n",
-    "**Need to install ffmpeg and add to path:https://www.gyan.dev/ffmpeg/builds/\n",
-    "get the ffmpeg-git-full.7z, extract it, add the bin to your System Environment path**\n",
-    "\n",
-    "* https://www.7-zip.org/ is where you can download the extractor specific to your machine\n",
-    "* then you right click the ffmpeg-git-full.7z file, and choose 'Extract here'\n",
-    "* rename the file to 'ffmpeg-download', then move it to a newly created folder with the path 'C:\\ffmpeg'\n",
-    "* Add new path in system environment variables with the following 'C:\\ffmpeg\\ffmpeg_download\\bin'\n",
-    "* In a new Command Prompt, confirm correct installation with ffmpeg -version\n",
-    "\n",
-    "**Need to install tesseract and do the same: https://github.com/UB-Mannheim/tesseract/wiki**\n",
-    "\n",
-    "* After installation with its default options chosen, the default path should be 'C:\\Program Files\\Tesseract-OCR'\n",
-    "* Add this path in system environment variables\n",
-    "* In a new Command Prompt, confirm correct installation with tesseract --version\n",
-    "\n",
-    "Note: You likely will need to manually type in the new paths in system environment variables as copy and paste won't work\n"
-   ]
   },
   {
    "cell_type": "code",
@@ -1635,13 +1635,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b0e3301",
+   "metadata": {},
+   "source": [
+    "**Use the Following Link to Create a Free Gemini API Key:** \n",
+    "https://ai.google.dev/gemini-api/docs/api-key"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "eb0664ca-76a8-49b2-bbad-4c2f57f86459",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your Gemini API key:  ········\n"
